# ParaHeat

./: CMakeLists.txt  CompareDistance.cpp  ComputeDistance.cpp  DistanceFile.h  EdgeBasedGeodesicSolver.cpp  EdgeBasedGeodesicSolver.h  EigenTypes.h  FaceBasedGeodesicSolver.cpp  FaceBasedGeodesicSolver.h  LICENSE  OMPHelper.h  Parameters.cpp  Parameters.h  README  README.md  SolverParams.txt  ViewScalarField.cpp
EdgeBasedGeodesicSolver/: CMakeLists.txt  DistanceFile.h  EigenTypes.h  GeodesicDistanceSolver.cpp  GeodesicDistanceSolver.h  GetRSS.h  OMPHelper.h  README
FaceBasedGeodesicSolver/: CMakeLists.txt  CompareDistance.cpp  ComputeDistance.cpp  DistanceFile.h  EigenTypes.h  GeodesicDistanceSolver.cpp  GeodesicDistanceSolver.h  OMPHelper.h  Parameters.cpp  Parameters.h  README  SolverParams.txt  ViewScalarField.cpp
